--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -2,6 +2,6 @@ import Link from 'components/Link';
 
 Hey! I’m Anton Fresher. Generally, you would see me jumping in between design, software engineering, product work, leadership, and writing, still figuring out what to do with all this.
 
-Now I'm building a core platform at <Link href='https://practicum.com' view='filled' color='#ff976b'>Practicum</Link>, a beginner-friendly online coding bootcamp.
+Now I'm building a core learning platform at <Link href='https://practicum.com' view='filled' color='#ff976b'>Practicum</Link>, a family of re-skilling products.
 
-Before Practicum, I was a software engineer at <Link href='https://yandex.com' view='filled' color='#fbcb70'>Yandex</Link>. Earlier—got a BSc in math and computer science at the Ural Federal University.
+Before Practicum, I was a software engineer at <Link href='https://yandex.com' view='filled' color='#fbcb70'>Yandex</Link> and got a BSc in math and computer science.
