--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -4,4 +4,4 @@ Hey! I’m Anton Fresher. Generally, you would see me jumping in between design,
 
 Now I'm building a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, online part-time coding bootcamps.
 
-Before TripleTen, I was a software engineer at <Link href='https://yandex.com' view='filled' color='#fbcb70'>Yandex</Link> and got a BSc in math and computer science.
+Before TripleTen, I was a product designer at <Link href='https://practicum.yandex.ru' view='filled' color='#c3c3c3'>Yandex Practicum</Link>. Previously, worked as a software engineer at <Link href='https://surveys.yandex.com/' view='filled' color='#b2c2f2'>Yandex Surveys</Link> and earned a BSc in math and computer science.
