--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -4,6 +4,6 @@ Hey! I’m Anton ![My photo](/anton-fresher.jpeg)
 
 Generally, you would see me jumping in between design, software engineering, product work, leadership, and writing, still figuring out what to do with all this.
 
-Now I'm building a core learning platform at <Link href='/experience/tripleten' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
+Now I'm building a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
 
 Before TripleTen, I was a product designer at <Link href='https://practicum.yandex.ru' view='filled' color='#c3c3c3'>Yandex Practicum</Link>. Previously, worked as a software engineer at <Link href='https://surveys.yandex.com/' view='filled' color='#b2c2f2'>Yandex Surveys</Link>, and earned a BSc in math and computer science.
